<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_storage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1">

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/files_dir" />

            <TextView
                android:id="@+id/files_dir"
                style="@style/TextViewDir" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_dir" />

            <TextView
                android:id="@+id/get_dir"
                style="@style/TextViewDir" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache_dir" />

            <TextView
                android:id="@+id/cache_dir"
                style="@style/TextViewDir" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/external_dir" />

            <TextView
                android:id="@+id/external_files_dir"
                style="@style/TextViewDir" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ext_cache_dir" />

            <TextView
                android:id="@+id/external_cache_dir"
                style="@style/TextViewDir" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloads" />

            <TextView
                android:id="@+id/downloads_dir"
                style="@style/TextViewDir" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pictures" />

            <TextView
                android:id="@+id/pictures_dir"
                style="@style/TextViewDir" />
        </TableRow>
    </TableLayout>
</ScrollView>
